feat: extract lat/long df in data_cleaning_v2

--- a/summary_report.html
+++ b/summary_report.html
@@ -1615,10 +1615,8 @@ this <a href="https://divvybikes.com/data-license-agreement">license</a>.</p>
 <h2>Process</h2>
 <p>Deliverable: Documentation of any cleaning or manipulation of
 data</p>
-<p>Google again provided the <a href="https://docs.google.com/document/d/1TzCqk59_J23D5zNCvwAPSgK-5osp-wVnifsc-VOpCaI/template/preview?usp=sharing">template</a>
-to clean the data (very helpful of them, making it rather easy to skip
-straight to analysis). See
-<code>data_cleaning_v1_2019q1_2020q1.R</code>.</p>
+<p>Google provided a starter template to clean the data. See
+<code>data_cleaning_v1.R</code>.</p>
 <p>I slightly modified the script to clean individual quarters of
 Cyclistic data. Google’s template covered only Q1 2019 and Q1 2020. I
 wanted to have 2019’s Q2, Q3, and Q4 available. This briefly
