--- a/summary_report.html
+++ b/summary_report.html
@@ -1604,11 +1604,11 @@ differently?</p>
 <div id="prepare" class="section level2">
 <h2>Prepare</h2>
 <p>Deliverable: A description of all data sources used</p>
-<p>Google provided the data, meaning Lyft and Divvy provided them with
-data from Chicago.</p>
+<p>Google provided the <a href="https://divvy-tripdata.s3.amazonaws.com/index.html">data</a>,
+meaning Lyft and Divvy provided them with data from Chicago.</p>
 <blockquote>
-<p>The data has been made available by Motivate International Inc. under
-this <a href="https://divvybikes.com/data-license-agreement">license</a>.</p>
+<p>The <a href="https://divvy-tripdata.s3.amazonaws.com/index.html">data</a> has
+been made available by Motivate International Inc. under this <a href="https://divvybikes.com/data-license-agreement">license</a>.</p>
 </blockquote>
 <p>I used data for 2019, because it has info on gender and birthyear.
 Pretend that was last year and the data is current and useful.</p>
