docs: update summary_report Analyze

--- a/summary_report.html
+++ b/summary_report.html
@@ -1651,6 +1651,21 @@ for Quality Control reasons.</p>
 <p>Deliverable: A summary of the data analysis</p>
 <p>See <code>./resources/scratch_pad.Rmd</code>. Appropriately named,
 the Scratch Pad is where I played with the data.</p>
+<p>Casual riders go longer than members (one hour vs 15 mins).</p>
+<p>More member rides than casual rides (3 million vs 1 million).</p>
+<p>Ridership peaks in August and nadirs in February, porportionally for
+both groups. Winter is dead. Crickets for activity.</p>
+<p>Casual riders ride late morning, peaking late afternoon, especially
+Saturday, quite a bit Sunday. Weekend Warriors. Members have two peaks -
+weekdays at 8am and 5pm. Commuters. They also ride roughly the same on
+weekends, a gentle curve from late morning to late afternoon.</p>
+<p>Top 10 stations! Members riders go to the “Loop”. Casual riders seem
+to hit tourist / leisure destinations (I assume? Must research Chicago
+landmarks. “Milleniumn Park”, “Shedd Aquarium”, “Theater on the Lake”,
+“Dusable Harbor”, and “Adler Planetarium” sound like destinations for
+the occasional bike rider).</p>
+<p>Members are slightly older, peaking in 30-35. Casual in 25-30.</p>
+<p>More men ride than women. Maybe an opportunity there.</p>
 </div>
 <div id="share" class="section level2">
 <h2>Share</h2>
