docs: update summary_report

--- a/summary_report.html
+++ b/summary_report.html
@@ -1500,17 +1500,22 @@ into annual members.</p>
 for a digital marketing campaign aimed at converting casual users into
 annual subscription-based members. The top three recommendations are
 provided.</p>
-<p>Result: Recommend focusing on converting casual weekend users into
-workday commuters, running an ad campaign emphasizing the benefits of
-commuting by bicycle, with ads targeted to popular leisure destinations
-and times, with accompanying promotions.</p>
+<p>Key conclusion: Recommend an ad campaign on enhancing the leisure
+experience as a benefit of membership, to align with the pattern of
+usage by casual riders, currently focused on longer weekend rides to
+popular leisure destinations. Current members tend to be commuters
+first, and leisure riders secondarily. Cyclistic should launch a
+marketing campaign emphasizing how membership enhances the existing
+riding habits of casual users, helping them see the benefits of
+membership.</p>
+<p>Analysis and expanded conclusions follow.</p>
 <p>Analysis: This analysis focused on differences in the riding behavior
 of casual users versus annual members.</p>
 <ul>
 <li><p>Members are primarily commuters and secondarily leisure users.
-Casual tend to be ‘weekend warriors’ using bicycles for trips to
-pleasurable outings. Casual rides are longer, averaging an hour to
-member’s 15-minute average. Member rides are unsurprisingly more
+Casual users tend to be leisure-oriented, using bicycles for trips to
+pleasurable outings. Casual rides are longer, averaging an hour, to
+member rider’s 15-minute average. Member rides are unsurprisingly more
 numerous, 4 times more frequent.</p></li>
 <li><p>Member rides peak during commuters hours, weekdays at 8am and
 5pm. Secondarily they use it for leisure, especially on weekends. Casual
@@ -1518,7 +1523,19 @@ riders mostly use bicycles for weekend leisure, peaking on Saturday
 afternoon, with Sunday afternoon not far behind.</p></li>
 <li><p>Members tend to be slightly older, peaking in their early-30’s,
 versus casual riders, peaking in their early-20’s.</p></li>
+<li><p>Member destinations tend to be centralized in the Loop, downtown
+Chicago’s central business district. Casual riders go to popular leisure
+destinations.</p></li>
 </ul>
+<p>Visuals:</p>
+<ul>
+<li><p>Average Ride Length bar chart</p></li>
+<li><p>Rides per Month by Customer Type line chart</p></li>
+<li><p>Rides per hour per day of week bar chart</p></li>
+<li><p>Top Station destinations (one chart, color-coded for casual vs
+member)</p></li>
+</ul>
+<p>Recommendations:</p>
 </div>
 </div>
 <div id="methodology" class="section level1">
@@ -1761,40 +1778,65 @@ Summary</a>.</p>
 <div id="act" class="section level2">
 <h2>Act</h2>
 <p>Deliverable: Top three recommendations based on analysis</p>
-<ol style="list-style-type: decimal">
-<li>Purpose of advertising</li>
-</ol>
+<p>Purpose of advertising</p>
 <ul>
-<li><p>Ad campaign relating to using a bike for work.</p></li>
-<li><p>Emphasize usefulness of bikes for commuting. Maybe advertise on
-industry / work events, trade orgs, etc. In neighborhoods that
-Chicagoans commute to.</p></li>
-<li><p>Mention helath benefits of commuting by bike. Members are
-slightly older, and maybe more health conscious.</p></li>
-<li><p>Include member testimonials on the power of commuting by
-bicycle.</p></li>
+<li><p>Ad campaign relating to using a bike for leisure.</p></li>
+<li><p>Include member testimonials on the joy of using bicycles for
+fun.</p></li>
 </ul>
-<ol start="2" style="list-style-type: decimal">
-<li>Locations / times to advertise:</li>
-</ol>
+<p>Advertising:</p>
 <ul>
-<li><p>Advertise on popular websites (restaurants, newpapers, vacation
-boards, arts &amp; leisure mags, ‘Things To Do in Chicago’) related to
-the top destinations of casual users (Shedd Aquarium, Theater on the
-Lake, et al).</p></li>
+<li><p>Advertise in popular digital spaces (restaurants, newpapers,
+vacation boards, arts &amp; leisure mags, ‘Things To Do in Chicago’,
+social media, travel blogs, event pages) related to the top destinations
+of casual users (Shedd Aquarium, Theater on the Lake, et al).</p></li>
+<li><p>Advertise around major events, and partner with them. St Patty’s
+Day, Blues festival, Air &amp; Water Show, Pride. (“Skip the traffic
+with a special Lollapalooza festival pass!”)</p></li>
+<li><p>Geotargeted ads near high-traffic casual rider stations (“Unlock
+unlimited rides this weekend with a membership trial!”).</p></li>
+<li><p>Feature imagery of scenic rides.</p></li>
 <li><p>Advertise on weekends when they are riding.</p></li>
+<li><p>Follow-up email marketing (“You rode three times this month. A
+membership would’ve saved you $X!”).</p></li>
+<li><p>Influencer partnerships. Get travel vloggers, fitness
+influencers, and urban explorers to showcase real-life experiences.
+Guided bike tours, like a “Museum Ride”, or a “Scenic Chicago
+Ride”.</p></li>
+<li><p>Gamification, with leaderboards (of miles biked) for friend
+groups, like Strava.</p></li>
+<li><p>Visuals in ads or emails of cost-savings (“Ride six times this
+month? You’re already paying for a membership - unlock unlimited rides
+today!”).</p></li>
 </ul>
-<ol start="3" style="list-style-type: decimal">
-<li>Promotions</li>
-</ol>
+<p>Promotions:</p>
 <ul>
-<li><p>End of summer sale, capitalizing on August peak ridership, when
-Cyclistic is top of popularity.</p></li>
-<li><p>Member bonuses for referring a friend to become a
-member.</p></li>
-<li><p>Free guest trial passes to people who commute at the same time as
-a member during peak commuting times 7-9am, 4-6pm (enlist significant
-others / house mates in commuting).</p></li>
+<li><p>Offer a weekend membership plan (“Leisure package”). Offer
+extended ride times on weekends, or a membership explicitly for weekends
+only.</p></li>
+<li><p>Summer pass deals, a limited-time discount.</p></li>
+<li><p>Have a summer sale, capitalizing on peak ridership, when
+Cyclistic is at the top of popularity and fresh in consumer’s
+minds.</p></li>
+<li><p>Member bonuses for referring a friend to become a member. Casual
+riders frequently bike in groups.</p></li>
+<li><p>Discounted trial rides (“First month free!”).</p></li>
+<li><p>Partnerships with leisure destinations. $5 off of the aquarium,
+20% off at a restaurant.</p></li>
+<li><p>Offer extra passes to foster usage (“Ride four times this month,
+earn a free day pass” - to hopefully convert to membership).</p></li>
+</ul>
+<p>Commuter crossover marketing.</p>
+<ul>
+<li><p>Show convenience of commuting by bicycle. Use real-world examples
+of saving time and money (“Beat rush hour traffic!”).</p></li>
+<li><p>Free guest trial passes to people who commute during peak
+commuting times 7-9am, 4-6pm (enlist significant others / house mates in
+commuting). (Admittedly dubious on this one).</p></li>
+<li><p>Corporate or student partnerships, offering discounted
+memberships to students and young professionals.</p></li>
+<li><p>CTA (Chicago Transit Authority) partnership, offering bike and
+bus/train bundles.</p></li>
 </ul>
 </div>
 </div>
