--- a/header.html
+++ b/header.html
@@ -3,3 +3,10 @@
 <!-- <h1 style='color:#2C3E50 !important; font-size: 42px;'>Cyclistic: A Google Data Analytics Capstone</h1> -->
 
 <!-- <h2 style='color:#2980B9;'>Understanding Ridership Patterns to Drive Membership Growth</h2> -->
+
+<!-- <p></p> -->
+
+<!-- <h2 style="color:#0085A1 !important; font-size: 42px; text-align: center;">Cyclistic: A Google Data Analytics Capstone</h2> -->
+
+<!-- <h2 style="color:#2980B9; text-align: center;">Understanding Ridership Patterns to Drive Membership Growth</h2> -->
+  
