fix: update readme and github pages links with new repo title

--- a/scratch_pad_2019.html
+++ b/scratch_pad_2019.html
@@ -12,7 +12,7 @@
 <meta name="author" content=" Bryan Johns " />
 
 
-<title>2019 Scratch Pad</title>
+<title>2019 Exploratory Data Analysis</title>
 
 <script src="scratch_pad_2019_files/header-attrs-2.29/header-attrs.js"></script>
 <script src="scratch_pad_2019_files/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -283,7 +283,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">2019 Scratch Pad</h1>
+<h1 class="title toc-ignore">2019 Exploratory Data Analysis</h1>
 <h4 class="author"><p style="font-style: italic;"><br />
 Bryan Johns<br />
 </p></h4>
@@ -295,9 +295,9 @@ Bryan Johns<br />
 <div class="floating-header">
 <p>2019 Exploratory Data Analysis</p>
 </div>
-<div id="scratch-pad-for-2019-cyclistic-exploratory-data-analysis"
+<div id="full-analytical-workflow-and-exploratory-outputs"
 class="section level2">
-<h2>Scratch Pad for 2019 Cyclistic Exploratory Data Analysis</h2>
+<h2>Full Analytical Workflow and Exploratory Outputs</h2>
 <div class="button">
 <p><a href="summary_2019.html#analysis">Back to<br>Cyclistic
 2019</a></p>
@@ -1065,7 +1065,7 @@ Source: <a href="https://www.freepik.com">Freepik</a>
       >LinkedIn
     </a>
     <a
-      href="https://github.com/johbry17/Cyclistic-A-Google-Data-Analytics-Capstone"
+      href="https://github.com/johbry17/Cyclistic-Analytics"
       target="_blank"
       class="github-link"
       aria-label="GitHub"
